...
  "viewWallet": "Anzeigen Wallet",
  "editProfile": "Profil bearbeiten",
  "browseMembers": "Mitglieder durchsuchen",
  "settings": "Einstellungen",
  "wallet": "Wallet",
  "messages": "Messages",
  "notifications": "Notifications",
  "activity": "Activity",
  "menuLabels": {
    "activity": "Activity",
    "matches": "Matches",
    "reviews": "Reviews",
    "helpSupport": "Hilfe & Support"
...
    "average": "Durchschnittliche Bewertung",
    "hot": "Top-Treffer",
    "sources": "Sources",
    "filter": {
      "all": "All",
      "listing": "Listings",
      "job": "Jobs",
      "volunteering": "Volunteering",
      "group": "Groups"
    },
    "source": {
      "listing": "Listing",
      "job": "Job",
      "volunteering": "Volunteering",
...
    "validation": "Validierung"
  },
  "hrs": "Stunden",
  "explore": "Erkunden",
  "events": "Events",
  "polls": "Umfragen",
  "ideation": "Ideas",
  "connections": "Verbindungen",
  "groups": "Gruppen",
  "groupExchanges": "Gruppenaustausch",
  "search": "Search",
  "jobs": "Jobs",
  "marketplaceSection": "Marketplace",
...
